--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
-  text-align: center;
+  width: 100%;
+  background-color: #e9edf3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  background-color: #e9edf3;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.cards-list {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin: 0 auto;
+  width: 86%;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, 300px);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card__image {
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card__title {
+  margin-left: 20px;
+}
+.card__description {
+  margin-left: 20px;
+}
+
+.card__like-icon {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 21px;
+  height: 18px;
+  cursor: pointer;
+  background-image: url(./images/like-inactive.svg);
+  background-color: transparent;
+  transition: transform 0.3s linear;
+  border: none;
+}
+
+.card__like-icon.card__like-icon_liked {
+  background-image: url(./images/like-active.svg);
 }
