--- a/src/App.css
+++ b/src/App.css
@@ -35,17 +35,14 @@
   border-top-right-radius: 10px;
 }
 
-.card__title {
-  margin-left: 20px;
-}
-.card__description {
-  margin-left: 20px;
+.card__content {
+  padding: 0 10px;
 }
 
 .card__like-icon {
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  right: 10px;
   width: 21px;
   height: 18px;
   cursor: pointer;
